--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "learning-application-backend",
+  "description": "learning web application backend",
   "main": "index.js",
   "type": "module",
   "scripts": {
